[package]
name = "coverages"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3" }
clap = { version = "4.3.19", features = ["derive"] }
flate2 = "1.0.26"
log = "0.4.19"
simple_logger = { version = "4.2.0", features = ["stderr"] }
tokio = { version = "1.29.1", features = ["rt"] }
