[package]
name = "maze"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
coverages = { path = "../coverages" }
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
rand = { version = "0.8.5", features = ["log", "serde", "alloc"] }
rand-wyrand = { version = "0.1.0" }
serde = { version = "1.0.179", features = ["derive"] }
tokio = { version = "1.29.1", features = ["sync"] }
clap = { version = "4.3.19", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.72"
image = "0.24.6"
simple_logger = "4.2.0"
toml = "0.7.6"
bitflags = "2.3.3"
